Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105527

Vulkan validation shows (useless but annoying) "errors" with vkkhrdisplay

XMLWordPrintable

    • dea9ed7e4c (qt/qtbase/dev) dea9ed7e4c (qt/tqtc-qtbase/dev) 4f4dbbac78 (qt/qtbase/6.4) 4f4dbbac78 (qt/tqtc-qtbase/6.4) d1934f4ed1 (qt/tqtc-qtbase/6.2) a34f132f68 (qt/qtbase/6.3) a34f132f68 (qt/tqtc-qtbase/6.3)

      Running something with Vulkan with VK_KHR_display on the RPi4 (e.g.
      QSG_RHI_BACKEND=vulkan QSG_RHI_DEBUG_LAYER=1 ./quick3dapp -platform vkkhrdisplay) prints things like this:

      vkDebug: Validation Error: [ UNASSIGNED-CoreValidation-DrawState-SwapchainUnsupportedQueue ] Object 0: handle = 0x2b000000002b, type = VK_OBJECT_TYPE_SWAPCHAIN_KHR; | MessageID = 0xe958eb44 | vkQueuePresentKHR: 
      Presenting pSwapchains[0] image without calling vkGetPhysicalDeviceSurfaceSupportKHR
      

      Should be prevented/suppressed.

        For Gerrit Dashboard: QTBUG-105527
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: