vkkhrdisplay: Silence validation complaints about presentation support

Zero reason to do this query, but the validation layer complains otherwise.

Fixes: QTBUG-105527
Change-Id: I7a72e4d6d89f41279db94efe663a696302f05ded
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit dea9ed7e4c688ce073deb4b15cc64587598a32df)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>